<resources>
    <string name="app_name">Micromanager</string>
    <string name="assignment_name_field">Name</string>
    <string name="add_assignment">Add Assignments</string>
    <string name="back_to_home">Home</string>
    <string name="optionsMenu">&#8942;</string>
    <string name="assignment_due_date_field">Due Date</string>
    <string name="assignment_type_field">Type</string>
    <string name="add_button">Add</string>
    <string name="view_schedule_button">Schedule</string>
    <string name="home_view_schedule_button">View Schedule</string>
    <string name="nameText">Name</string>
    <string name="typeText">Type</string>
    <string name="dueDateText">Due Date</string>
    <string name="Or_Bar">------------or------------</string>
    <string name="markAsDone">Mark As Done</string>
    <string name="setPriority">Set Priority</string>
    <string name="sampleType">Sample Type</string>
    <string name="sampleName">Sample Item</string>
    <string name="sampleDueDate">Sample Date</string>
    <string name="mainLogoOnTitleScreen">Main Logo on the title screen</string>
    <string name="howToUseTitle">How To Use</string>
    <string name="howToUseDirections1">This is the add button. By pressing this button you will be taken to the Add Screen</string>
    <string name="howToUseDirections2">This is the add screen you can type in your assignments name, select the due date from
        a calender, and set the type. When finished press \'Add\' to add your assignment</string>
    <string name="howtoUseDirections3">Welcome to Micromanager! On our home screen you can click \'View Schedule\' to see your schedule or \'Add Assignments\' to go to the add screen</string>
    <string name="assignmentListTutorial">"This is the assignment list screen. Here you can swipe at a single assignment to delete, or press the trash can to delete it as well. Press the plus at the bottom to go to the add screen. \n\n Assignments are color coded: Red for overdue, Green for due today, Blue for due tomorrow, colorless for due in the future</string>
    <string name="checkboxtutuorial">The checkbox on each assignment is the \'Mark As Done\' field where you can check off assignments you have completed</string>
    <string name="todyupTutorial">Press this icon once you are ready to tidy up your assignments. This will remove any completed assignments</string>
    <string name="helpButtonDesc">Help</string>
    <string name="aboutTitle">About</string>
    <string name="aboutTheApp">We created Micromanager as a result of the advent of online classes. Realizing how important it was to keep on top of our assignments, we wanted to make an app to help students just like ourselves
    keep organized. With this app students can keep track of all their assignments so they don\'t fall behind. Below you can find information about the team who put this app together. </string>
    <string name="SafwaanName">Safwaan Taher</string>
    <string name="SafwaanRole">Project Lead</string>
    <string name="SafwaanDesc">As project lead Safwaan oversaw backend development, created and led UI design, implemented improvements to the project based on suggestions and planned out the project. \n\nYou can learn more about Safwaan here: </string>
    <string name="SafwaanLink">https://www.linkedin.com/in/safwaan-taher-5042511b0/</string>
    <string name="HumzaName">Humza Lala</string>
    <string name="HumzaRole">Lead Backend Developer</string>
    <string name="HumzaDesc">As lead backend developer Humza implemented the many classes involved in Android\'s Room database for storing the assignments. He also led development on the assignment list screen with Android\'s RecyclerView. \n\nYou can learn more about Humza here:</string>
    <string name="HumzaLink">https://www.linkedin.com/in/humza-lala-140a101a5/</string>
    <string name="SifatName">Sifat Hasan</string>
    <string name="SifatRole">Assistant Backend Developer</string>
    <string name="SifatDesc">As Assistant Backed Developer, Sifat contributed to implementing Android Studio\'s Room Database, suggested improvements and helped fix bugs and issues within development. \n\nYou can learn more about Sifat here: </string>
    <string name="SifatLink">https://www.linkedin.com/in/sifat-hasan-13387a187/</string>
    <string name="tidyUpIconDesc">Tidy Up</string>
    <string name="DeleteButtonDesc">Delete</string>
    <string name="addbuttonassignmentlist">addbuttonassignmentlist</string>
</resources>