<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Screen"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/Due_Date_Field"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:hint="@string/assignment_due_date_field"
        android:clickable="true"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/Name_Field"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:drawableBottom="@android:color/background_dark"
        android:hint="@string/assignment_name_field"
        app:layout_constraintBottom_toTopOf="@+id/Due_Date_Field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <EditText
        android:id="@+id/Type_Field"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:hint="@string/assignment_type_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Due_Date_Field"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/Add_Button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:onClick="addAssignmentToDatabase"
        android:text="@string/add_button"
        android:textColor="#ffcc99"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Type_Field"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/view_schedule"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/custom_button_2"
        android:fontFamily="sans-serif-black"
        android:onClick="goToAssignmentListScreen"
        android:text="@string/view_schedule_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_Button"
        app:layout_constraintVertical_bias="0.759" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registrationToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#fffff0"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#ffcc99"
        app:subtitleTextColor="@color/white"
        android:theme="@style/AppTheme"
        app:title="Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>